플러그인 추가

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "vuepress": "1.8.2",
     "vuepress-theme-reco": "1.6.10"
   },
-  "description": "kore3lab의 기술블로그 입니다."
+  "description": "kore3lab의 기술블로그 입니다.",
+  "dependencies": {
+    "vuepress-plugin-code-copy": "^1.0.6"
+  }
 }
